feat(user): implement complete user creation flow